--- a/linux/src/index.html
+++ b/linux/src/index.html
@@ -11,7 +11,76 @@
   <body>
   <label for="gun">Gun</label>
     <select id="gun">
+      <optgroup label="Assault Rifles">
       <option value="0">Ak Alpha</option>
+      <option value="1">AK5C</option>
+      <option value="2">AK-74</option>
+      <option value="3">AKM</option>
+      <option value="4">AK74-U</option>
+      <option value="5">ASVAL</option>
+      <option value="6">Aug</option>
+      <option value="7">Famas</option>
+      <option value="8">G36K</option>
+      <option value="9">G3A3</option>
+      <option value="10">Galil</option>
+      <option value="11">L85A2</option>
+      <option value="12">M16</option>
+      <option value="13">M1SASS</option>
+      <option value="14">M4</option>
+      <option value="15">SCAR</option>
+      <option value="16">SG552</option>
+      <option value="17">SKS</option>
+      <option value="18">SKS(auto)</option>
+      <option value="19">Stoner</option>
+      <option value="20">VSS</option>
+      </optgroup>
+      <optgroup label="SMGs">
+      <option value="21">Agram</option>
+      <option value="22">Cx8Storm</option>
+      <option value="23">Vector10mm</option>
+      <option value="24">Vector9mm</option>
+      <option value="25">Luty</option>
+      <option value="26">Mac10</option>
+      <option value="27">Mac11</option>
+      <option value="28">MAT-49</option>
+      <option value="29">MP40</option>
+      <option value="30">MP5</option>
+      <option value="31">MP7</option>
+      <option value="32">MP9</option>
+      <option value="33">P90</option>
+      <option value="34">PPBizon</option>
+      <option value="35">PPSH</option>
+      <option value="36">Thompson</option>
+      <option value="37">UMP45</option>
+      <option value="38">TheFinReaper</option>
+      <option value="39">JWMPX</option>
+      </optgroup>
+      <optgroup label="Pistol">
+      <option value="40">Colt1911</option>
+      <option value="41">JW2011</option>
+      <option value="42">Deagle</option>
+      <option value="43">FN57</option>
+      <option value="44">Glock</option>
+      <option value="45">JWG34</option>
+      <option value="46">USP45</option>
+      <option value="47">Makarov</option>
+      <option value="48">Ruger</option>
+      <option value="49">Tokarev</option>
+      </optgroup>
+      <optgroup label="Bolt Action Rifles">
+      <option value="50">AWM</option>
+      <option value="51">Mosin</option>
+      <option value="52">M1903</option>
+      <option value="53">Hunter85</option>
+      </optgroup>
+      <optgroup label="Sniper Rifles">
+        <option value="54">Barret</option>
+        <option value="55">Dragunov</option>
+      </optgroup>
+      <optgroup label="LMGs">
+      <option value="56">BAR</option>
+      <option value="57">XM250</option>
+      </optgroup>
     </select>
   <label for="helmet">Helmet</label>
   <select id="helmet">
